Link token request works. Need to figure out token middleware token handling yet
